fix: set a boundary for windows, make menus overlap windows (#3)

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -78,6 +78,12 @@ body:not(pre) {
 
 /* --------- app window --------- */
 
+.window-bound {
+  width: 300%;
+  height: 200%;
+  left: -100%;
+}
+
 .innner-window {
   height: calc(100% - 1.5rem);
 }
